# teledictionary-bot

./: .gitignore  .pdm-python  LICENSE  README.md  SECURITY.md  example.env  notes.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: code_review.yml
src/teledictionary_bot/: enums.py  handlers.py  main.py  settings.py
src/teledictionary_bot/database/: base.py  dictionaries.py  user.py
src/teledictionary_bot/models/: base.py  dictionary.py  user.py
src/teledictionary_bot/operations/: __init__.py  help.py  search.py  select_dictionary.py  start.py
src/teledictionary_bot/operations/admin/: __init__.py  dictionaries.py
src/teledictionary_bot/strings/: __init__.py  eng.py  get.py  ukr.py
